static/styles.css
*::before,*::after,*{box-sizing: border-box; margin: 0px 0px;}
:root {
	--clr-bg-curve: #181f2b;
	--clr-bg-fill: rgba(28, 34, 48, 1);
	--clr-cta: rgba(79, 196, 213, 1);
	--clr-text: white;
	--ff-title: "Raleway", sans-serif;
	--ff-body: "Open Sans", sans-serif;
}

html, body {
	width: 100%;
  height: 100%;
}

body {
	background-color: var(--clr-bg-fill);
	color: var(--clr-text);
	font-family: var(--ff-body);
	padding: 16px 16px;
}

body > *:not(:first-child) {
	margin: 0px 0px 64px 0px;
}

.flex-between {
	display: flex;
	justify-content: space-between;
	align-items: center;
}

.no-bullets {
	list-style-type: none;
	padding: 0;
	margin: 0;
}

a { color: inherit; }

nav { padding: 1%; }

nav > ul {
	gap: 8px;
	font-size: 12px;
}

nav ul a {
	white-space: nowrap;
	text-decoration: none;
}

body article:nth-of-type(1) {
	text-align: center;
}

body article:nth-of-type(1) > * {
	margin: 0px 0px 16px 0px;
}

body article:nth-of-type(1) h1 {
	font-family: var(--ff-title); 
	font-size: 23px;
	margin: 0px 0px 8px 0px;
}

body article:nth-of-type(1) p {
	font-family: var(--ff-body); 
	font-size:14px;
}

article form button[type="submit"] {
	border: none;
	background-color: var(--clr-cta);
	color: var(--clr-text);
	padding: 8px 16px;
	font-weight: bold;
	font-size: 15px;
  border-radius: 25px;
}

button[type="submit"]:hover {
	box-shadow: 0px 4px 16px rgba(0, 0, 0, 30%);
}

.feature_card_container {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	gap: 16px;
}

